[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/Shared/PopupOptionButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/KembaliButton.png" type="Texture2D" id=2]
[ext_resource path="res://Sprites/QuitIcon.png" type="Texture2D" id=3]
[ext_resource path="res://Sprites/SettingIcon.png" type="Texture2D" id=4]
[ext_resource path="res://Sprites/ExtrasIcon.png" type="Texture2D" id=5]
[ext_resource path="res://GameDVDCardtridge/ChangeDVDv3/Scaffolds/ChangeDVDpopupOption.gd" type="Script" id=6]

[node name="ChangeDVDpopupOption" type="PopupPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -295.727
offset_right = 0.00012207
offset_bottom = -95.727
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SampleButton" parent="HBoxContainer" instance=ExtResource( 1 )]
visible = false
offset_right = 1904.0
offset_bottom = 184.0
ButtonLabel = "Sample"
ButtonIcon = ExtResource( 2 )

[node name="SettingButton" parent="HBoxContainer" instance=ExtResource( 1 )]
offset_right = 632.0
offset_bottom = 184.0
ButtonLabel = "Setting"
ButtonIcon = ExtResource( 4 )

[node name="ExtrasButton" parent="HBoxContainer" instance=ExtResource( 1 )]
offset_left = 636.0
offset_right = 1268.0
offset_bottom = 184.0
ButtonLabel = "Extras"
ButtonIcon = ExtResource( 5 )

[node name="ShutdownButton" parent="HBoxContainer" instance=ExtResource( 1 )]
offset_left = 1272.0
offset_right = 1904.0
offset_bottom = 184.0
ButtonLabel = "Shutdown"
ButtonIcon = ExtResource( 3 )
[connection signal="about_to_popup" from="." to="." method="_on_ChangeDVDpopupOption_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_ChangeDVDpopupOption_popup_hide"]
[connection signal="button_pressed" from="HBoxContainer/SettingButton" to="." method="_on_SettingButton_button_pressed"]
[connection signal="button_pressed" from="HBoxContainer/ExtrasButton" to="." method="_on_ExtrasButton_button_pressed"]
[connection signal="button_pressed" from="HBoxContainer/ShutdownButton" to="." method="_on_ShutdownButton_button_pressed"]
